tests/reference/ast-multi_error1-6934f65.stderr
syntax error: Newline is unexpected here
 --> tests/multi_error1.f90:3:15
  |
3 | integer :: x =
  |               ^ 
